--- a/index.html
+++ b/index.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AkiGR</title>
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    hello wold
+    <header>
+        <div class="header-content">
+            <img src="img/icon.png" alt="Profile Icon" class="profile-icon">
+            <div>
+                <h1>Hello, I'm Aki</h1>
+                <p class="title"><span>Web Developer / Programmer</span></p>
+            </div>
+        </div>
+        <div class="social-links">
+            <a href="https://x.com/aki96667887" target="_blank">X</a>
+            <a href="https://github.com/AkiGR" target="_blank">GitHub</a>
+            <a href="https://zenn.dev/aki_pro" target="_blank">Zenn</a>
+        </div>
+    </header>
+
+    <section id="projects">
+        <div class="container">
+            <h2>Projects</h2>
+            <div class="project-grid">
+                <div class="project-card">
+                    <h3>
+                        Neovim config file 
+                        <span class="badge">Lua</span> <!-- Lua badge next to project name -->
+                    </h3>
+                    <p>Config file based on Neovim's LagyVim</p>
+                    <a href="https://github.com/AkiGR/public-nvim-config" class="button">View on GitHub</a>
+                </div>
+                <div class="project-card">
+                    <h3>
+                        RPN calculator
+                        <span class="badge java-badge">Java</span> <!-- Java badge next to project name -->
+                    </h3>
+                    <p>Reverse Pollan implemented</p>
+                    <a href="https://github.com/AkiGR/java-rpn-calculator" class="button">View on GitHub</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Aki. All rights reserved.</p>
+    </footer>
 </body>
 </html>
+
