remove comments and refactor

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="project-card">
                     <h3>
                         Neovim config file 
-                        <span class="badge">Lua</span> <!-- Lua badge next to project name -->
+                        <span class="badge">Lua</span>
                     </h3>
                     <p>Config file based on Neovim's LagyVim</p>
                     <a href="https://github.com/AkiGR/public-nvim-config" class="button">View on GitHub</a>
@@ -38,7 +38,7 @@
                 <div class="project-card">
                     <h3>
                         RPN calculator
-                        <span class="badge java-badge">Java</span> <!-- Java badge next to project name -->
+                        <span class="badge java-badge">Java</span>
                     </h3>
                     <p>Reverse Pollan implemented</p>
                     <a href="https://github.com/AkiGR/java-rpn-calculator" class="button">View on GitHub</a>
